centjes-gen/test_resources/balance/error/as-is/BE_OFF_BALANCE-simple.cent
currency USD 0.01

account assets

2023-11-24
  * assets +1 USD
